--- a/index.html
+++ b/index.html
@@ -139,8 +139,17 @@
         <h1>Introduction</h1>
         <h2>Climate Change and Geological Hazards</h2>
         <p>
-            Washington's coast is increasingly threatened by climate change and geological hazards. You may have heard about terms like "sea level rise", "global warming", "earthquake", "tsunami" from the Internet, from news media, from your community leaders... But do you really understand these terms? Like, what are their relationships with climate change and geological hazards? And more importantly, what are their impacts on South Beach communities?
-
+            Washington's coast is increasingly threatened by climate change and geological hazards.
+            "Climate change", "geological hazards", "sea level rise", "global warming", "earthquake",
+            "tsunami" are jargons that are often used by researchers in
+            environmental science and geology.
+            You may have heard about these terms a million times from the Internet, from news media,
+            from academic people...
+        </p>
+        <p>
+            But, these scientific terms are sometimes overwhelming. You may wonder, what are their
+            definitions? Why do I need to hear about these terms? This storytelling will translate them into plain
+            words. And more importantly, reveal their impacts on South Beach communities.
         </p>
 
         <section class="flex-row" style="margin-left: 15px; margin-right: 15px;">
@@ -157,6 +166,7 @@
                 <p>
                     Mounting evidence has suggested that the sea level is rising globally, and the sea level rise is accelerating due to the worsening climate change and global warming. Impacts of sea level rise includes erosion of beaches, inundation of deltas, salinity of water. <span class="underline"><strong>The South Beach coastal communities are at the frontline</strong></span>.
                 </p>
+                <p style="text-decoration: line-through">place holder for an axis suggesting events of king tide inundation, expect more events in recent years</p>
             </section>
             <section style="width: 50%;">
                 <h3>Geological Hazards<span class="material-symbols-outlined">
@@ -186,6 +196,8 @@
         <section style="width: 70%; margin-left: auto; margin-right: auto; border: 3px dashed #999797; padding: 20px;">
             <h3 style="text-align: center; margin-top: 10px;">The combined effects of climate change and geological hazards</h3>
             <p>
+                Natural phenomena are not isolated. Climate change and geological hazards are not
+                independent of each other. They are interconnected and have combined effects on the environment.
                 <ul>
                     <li>
                         The inter-seismic uplift of the tectonic plate will offset the sea level rise in South Beach.
@@ -193,7 +205,7 @@
                             An earthquake is an acute geological disaster. But you cannot say during periods of calm, the tectonic plates are still. Actually, they are in constant motion, both vertically and horizontally, at a slow pace that easily goes unnoticed. We call this phenomenon <strong>inter-seismic tectonic movement</strong>.
                         </p>
                         <p>
-                            The tectonic plate in our South Beach area is uplifting, we call this <strong>Inter-seismic uplift</strong>. In other words, the sea level rise referenced to our place is anticipated to be less than the global average.
+                            The tectonic plate in our South Beach area is uplifting during calm periods, we call this <strong>Inter-seismic uplift</strong>. In other words, the sea level rise referenced to our place is anticipated to be less than the global average.
                         </p>
                     </li>
                     <li>
@@ -208,16 +220,26 @@
       <article style="margin-top: 10px;">
         <h2>Takeaways from this section</h2>
         <ol style="margin-bottom: 0; padding-bottom: 30px;">
-            <li>Climate change and associated sea level rise will impact South Beach;</li>
-            <li>South Beach is also risky to earthquake and tsunami hazards;</li>
-            <li>Climate change and geological hazards have combined effects;</li>
-            <li>climate change and earthquake will fundamentally reshape the coastal environment in South Beach.</li>
+            <li>Global warming causes climate change and associated sea level rise;</li>
+            <li>Climate change and sea level rise will have a fundamental impact on South Beach;</li>
+            <li>South Beach is risky to earthquake and tsunami hazards;</li>
+            <li>Climate change and geological hazards are interrelated and have combined effects;</li>
+            <li>Climate change and earthquake will fundamentally reshape the coastal environment in South Beach.</li>
         </ol>
       </article>
     </section>
 
     <section id="myth">
-        <h1>Quinault Stories of the 1700 tsunami</h1>
+        <h1>Local Evidence of the 1700 Tsunami</h1>
+        <p></p>
+        <article id="geo-evidence">
+            <h2>Geological Records</h2>
+        </article>
+
+        <article id="indigeous">
+            <h2>Indigenous Stories of the 1700 tsunami</h2>
+        </article>
+
     </section>
 
     <section id="history-shoreline">
@@ -235,7 +257,7 @@
         <h2>Adaptation is in our blood</h2>
         <p>But don't panic! Though we may seem a little bit foreign to climate change and tsunamis, we are familiar with one thing: <span class="capital uppercase"><strong>adaptation. </strong></span> The coastline in South Beach has been historically dynamic. We are living on the fastest changing coastline in North America. Our community has been learning to adapt to coastline changes quite well. See below the time-lapsed satellite images of South Beach coastline from 1984 to 2016.</p>
         <figure>
-            <img src="img/dynamic-shoreline.gif" alt="Dynamic Shoreline" class="ctr-img">
+            <!-- <img src="img/dynamic-shoreline.gif" alt="Dynamic Shoreline" class="ctr-img"> -->
             <figcaption>
                 The dynamic shoreline of South Beach, Washington. Composite of annual Google Maps satellite views taken from 1984 to 2016. Credit: Robert Hutchison Architecture and Cory Mattheis.
                 <a href="https://archleague.org/article/south-beach-washington-intro/" target="_blank">
@@ -244,11 +266,11 @@
             </figcaption>
         </figure>
       </article>
-        <div class="down-arrow-cover animate__animated animate__flash animate__infinite animate__slow" style="position: relative;">
+        <div class="down-arrow-cover" style="position: relative;">
             <div class="down-arrow-cover-text">
                 Scroll down to interact with the map to see how the shoreline has changed over time
             </div>
-            <div class="down-arrow-cover-arrow">
+            <div class="down-arrow-cover-arrow  animate__animated animate__flash animate__infinite animate__slow">
                 <i class="bi bi-chevron-double-down animate__animated animate__flash animate__infinite animate__slow" style="font-size: 3em; color:white;text-shadow: 2px 2px 4px rgb(51, 51, 51); position: static;left: auto;transform: none ;bottom: auto;" ></i>
             </div>
         </div>
@@ -763,7 +785,7 @@
                 'visibility': 'visible'
             },
             "paint":{
-                "line-width": 1,
+                "line-width": 0.1,
                 "line-color": "red",
                 "line-opacity": 0   //default to invisible
             }
@@ -795,7 +817,7 @@
                 'visibility': 'visible'
             },
             "paint":{
-                "line-width": 8,
+                "line-width": 12,
                 "line-color": "red",
                 "line-opacity": 0      //default to invisible
             }
@@ -810,7 +832,7 @@
                 'visibility': 'visible'
             },
             "paint":{
-                "line-width": 12,
+                "line-width": 20,
                 "line-color": "red",
                 "line-opacity": 0      //default to invisible
             }
